Simplify stream usage